[project]
name = "silverblue-tools"
version = "0.1.0"
description = "A toolbox of scripts for Silverblue related projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyxdg",
  "pillow",
  "ruamel.yaml",
]

[project.scripts]
flatpak-curl = "flatpak_curl:main"
flatpak-alias = "flatpak_alias:main"
toolbox-export = "toolbox_export:main"
